# uimm

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  uimm.example.toml
.serena/: project.yml
.serena/memories/: project_overview.md  style_and_conventions.md  suggested_commands.md  task_completion.md
uimm/: app.py  audio_input.py  config.py  endpointing.py  mcp_client.py  mcp_server.py  player.py
